--- a/forms/forms.html
+++ b/forms/forms.html
@@ -9,5 +9,6 @@
     </head>
     <body bgcolor=#0F4B5E text=#00FFE1>
         <h1>Demostration of Forms in HTML</h1>
+        <div><p>The following aragraph is a demonstration of Froms in HTML.</p></div>
     </body>
 </html>
